removed font optical sizing and fixed breaks in ordered list

--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body{
     font-family: "Rosarivo", serif;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
@@ -45,20 +44,17 @@ nav ul a:hover{
 }
 h1{
     font-family: "Rosarivo", serif;
-    font-optical-sizing: auto;
     font-style: normal;
     font-size: 48px;
 }
 h2{
     font-family: "Rosarivo", serif;
-    font-optical-sizing: auto;
     font-style: normal;
     font-size: 32px;
     line-height: 1.5;
 }
 h3{
     font-family: "Rosarivo", serif;
-    font-optical-sizing: auto;
     font-style: normal;
     font-size: 24px;
     line-height: 0.1;
@@ -73,7 +69,8 @@ p{
     quotes: "«""»"
 }
 ol{
-   line-height: 1;
+   line-height: 1.5;
+   
 }
 #gallery img{
     width:100%;
